--- a/5/paper.tex
+++ b/5/paper.tex
@@ -80,4 +80,24 @@ from which
 \end{equation*}
 follows directly by comparison.
 
+\section{Simple Sampling --- Integration}
+
+The Runge-function has been plotted in \cref{fig:runge} and the statistical and
+actual error in \cref{fig:error}. The code used is in the file \texttt{ex3.py}.
+
+\begin{figure}[htb]
+    \centering
+    \includegraphics[width=\textwidth]{runge}
+    \caption{The Runge-function in the intervall $[-5,5]$}
+    \label{fig:runge}
+\end{figure}
+
+\begin{figure}[htb]
+    \centering
+    \includegraphics[width=\textwidth]{error}
+    \caption{Errors for different sample sizes, (example run)}
+    \label{fig:error}
+\end{figure}
+
+
 \end{document}
